fix env