@@ -110,7 +110,9 @@ public class DockerEnvironment implements BaseEnvironment {
                     .withAttachStdout(true)
                     .withAttachStderr(true);
                 if (envp != null && envp.length > 0) {
-                    execCmd.withEnv(Arrays.asList(envp));
+                    final List<String> containerEnv = execCmd.getEnv();
+                    containerEnv.addAll(List.of(envp));
+                    execCmd.withEnv(containerEnv);
                 }
                 final ExecCreateCmdResponse exec = execCmd.exec();
                 LOG.info("Executing cmd {}", String.join(" ", command));
